# chef-gpt-api

./: .drone.yml  .gitignore  README.md  config.py  env_default.yml  pyproject.toml  requirements.txt
app/: __init__.py  cors_middleware.py  exception_handler.py  extension.py  logging_handler.py
app/db/: conversation_entity.py  login_entity.py  message_entity.py  role_entity.py  token_entity.py  user_entity.py
app/enum/: role.py  status_msg.py
app/exception/: db_exception.py  email_excpetion.py  password_exception.py  token_exception.py  user_exception.py
app/helper/: db_helper.py  email_helper.py  password_helper.py
app/model/: base_res.py  conversation_page_res.py  conversation_res.py  login_req.py  login_res.py  message_page_res.py  message_qa_res.py  message_req.py  message_res.py  page_res.py  registration_req.py  registration_res.py  title_res.py
app/router/: conversation_router.py  line_router.py  user_router.py
app/service/: chat_service.py  user_service.py
app/util/: time_util.py  uuid_util.py
script/: start_postgresql.sh  start_qdrant.sh
sql/: init_table.sql
